--- a/app-frame.html
+++ b/app-frame.html
@@ -9,17 +9,26 @@
 	<link rel="stylesheet" href="./app-content-style.css">
 </head>
 
-<body>
-	<div class="tab-content container-fluid" id="tab-content-container">
-		<div id="notepad-app-container">
-			<div id="notepad-content" contenteditable="true" placeholder="Start writing notes..."></div>
-			<div id="notepad-meta">
+<body class="hover-container">
+	<div>
+		<div class="tab-content container-fluid" id="tab-content-container">
+			<div class="commands">
+				<span>
+					<!-- <button id="save-button">Save</button> -->
+					<!-- <button id="summarize-button">Summarize</button> -->
+					<!-- <button id="close-button">Close</button> -->
+				</span>
+			</div>
+			<div id="notepad-app-container">
+				<div id="notepad-content" contenteditable="true" placeholder="Start writing notes..."></div>
+				<div id="notepad-meta">
+				</div>
 			</div>
 		</div>
-		<script type="text/javascript" src="./apps/notes/notes.js"></script>
 	</div>
-
-    <script type="text/javascript" src="./notepad-utilities.js"></script>
 </body>
 
+<script type="text/javascript" src="./apps/notes/notes.js"></script>
+<script src="./commands.js"></script>
+<script type="text/javascript" src="./notepad-utilities.js"></script>
 </html>
